Sonar S2129 Constructors should not be used to instantiate 'String', 'BigInteger', 'BigDecimal' and primitive-wrapper classes (Issue #1066)